--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "name": "mat3d",
   "description": "This is a proof-of-concept for a Virtual Tabletop using Three.js and vanilla JavaScript.",
   "version": "0.1.0",
-  "main": "index.js",
   "scripts": {
+    "start": "http-server .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
